--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@goatee/prettier": "^0.0.4",
     "@parcel/packager-ts": "2.9.2",
     "@parcel/transformer-typescript-types": "2.9.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.44.0",
     "parcel": "^2.9.2",
     "typescript": ">=3.0.0"
   }
