--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/ntwigs/shader-tailor",
   "version": "1.0.3",
   "source": "src/index.ts",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/types.d.ts",
   "files": [
@@ -14,7 +15,9 @@
   "prettier": "@goatee/prettier",
   "scripts": {
     "watch": "parcel watch",
-    "build": "parcel build"
+    "build": "parcel build",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@goatee/prettier": "^0.0.4",
@@ -22,8 +25,11 @@
     "@parcel/transformer-typescript-types": "2.9.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "eslint": "^8.44.0",
     "parcel": "^2.9.2",
-    "typescript": ">=3.0.0"
+    "typescript": ">=3.0.0",
+    "vite-plugin-glsl": "^1.1.2",
+    "vitest": "^0.33.0"
   }
 }
