--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn ci
+    - run: yarn install --frozen-lockfile
     - run: yarn test
     - run: yarn build --no-source-maps
